--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,13 +29,14 @@ website:
         href: https://cmgr.oit.duke.edu/containers
         text: "RStudio Containers"
       - icon: chat-dots-fill
-        href: https://edstem.org/us/courses/62513/discussion/
+        href: https://edstem.org/us/courses/70811
+        text: Ed Discussion
       - icon: check-square-fill
         menu:
           - text: Canvas
-            url: https://canvas.duke.edu/courses/38867
+            url: https://canvas.duke.edu/courses/51767
           - text: Gradescope
-            url: https://www.gradescope.com/courses/829034
+            url: https://www.gradescope.com/courses/936843
     style: "docked"
     search: true
     collapse-level: 1
@@ -48,8 +49,6 @@ website:
         text: Support
       - href: index.qmd
         text: Schedule 
-      - href: links.qmd
-        text: Useful links
       - section: Computing
         contents: 
         - href: computing-access.qmd
@@ -94,8 +93,12 @@ website:
           text: Tips + resources
     #  - href: https://duke.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=ccfa023a-c78c-4254-93ea-b1d80116d1dc
      #   text: Lecture recordings
-      - href: math-rules.qmd
-        text: Math rules
+     # - href: math-rules.qmd
+      #  text: Math rules
+      - href: links.qmd
+        text: Useful links
+      - href: https://forms.office.com/r/rvsgNcumRy
+        text: Lecture recording request
     #  - href: exam-02-practice.qmd
     #    text: Exam 02 Practice
         
