--- a/_quarto.yml
+++ b/_quarto.yml
@@ -93,16 +93,16 @@ website:
           text: Instructions
         - href: project-tips.qmd
           text: Tips + resources
-    #  - href: https://duke.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=ccfa023a-c78c-4254-93ea-b1d80116d1dc
-     #   text: Lecture recordings
-     # - href: math-rules.qmd
-      #  text: Math rules
       - href: links.qmd
         text: Useful links
-      - href: https://forms.office.com/r/rvsgNcumRy
-        text: Lecture recording request
+   #   - href: https://forms.office.com/r/rvsgNcumRy
+      #  text: Lecture recording request
     #  - href: exam-02-practice.qmd
     #    text: Exam 02 Practice
+      - href: https://duke.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx?folderID=0b5392d5-d61b-465a-80eb-b25e014a75a9
+        text: Lecture recordings
+      - href: math-rules.qmd
+        text: Math rules
         
 
 format:
